--- a/16-basic-authentication/lab/package.json
+++ b/16-basic-authentication/lab/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "db": "mongod --dbpath=/path/to/your/db",
     "start": "node index.js",
+    "debug": "nodemon --inspect index.js",
     "watch": "nodemon index.js",
     "test-watch": "jest --watchAll",
     "test": "jest",
